# rdbgenerate

./: README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yml  test.yml
rdbgenerate/: __init__.py  constants.py  crc64.py  rdbgen.py
src/rdbgenerate/: __init__.py  constants.py  crc64.py  rdbgen.py
test/: test_crc64.py  test_rdbconvert.py
